added player collisions

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <canvas></canvas>
+    <script src="data/collisions.js"></script>
     <script src="index.js"></script>
+  
 </body>
 </html>
